--- a/src/i18n/locales/en/en.json
+++ b/src/i18n/locales/en/en.json
@@ -1,1 +1,7 @@
-{}
+{
+  "header.course": "Course",
+  "header.program": "Program",
+  "header.feedback": "Feedback",
+  "header.price": "Price",
+  "header.personal": "Personal Area"
+}
