--- a/src/i18n/locales/en/en.json
+++ b/src/i18n/locales/en/en.json
@@ -3,5 +3,66 @@
   "header.program": "Program",
   "header.feedback": "Feedback",
   "header.price": "Price",
-  "header.personal": "Personal Area"
+  "header.personal": "Personal Account",
+  "footer.questions": "Have questions? ",
+  "footer.feedback": "Write here",
+  "footer.chat": "@qa_guru_chat",
+  "faq.objects": 
+  [
+    {
+      "question": "How are classes held?", 
+      "answer": "In live mode with teachers on Tuesdays and Fridays at 8 pm Moscow time, class records are posted the next day, we also add timecodes for the records to make it easier for you to review them. Most of the classes have homework.",
+      "id": "panel1bh-header",
+      "name": "panel1"
+    },
+    {
+      "question": "What do you need to know/be able to/have to study on the course?", 
+      "answer": "Operating system: Win/Mac/Linux, 8GB RAM, i3 2.8Ghz processor or better. A minimum of 6 free hours per week, 4 of which will be occupied by classes, plus accomplishing Homework. Task completion time  highly depends on the method you choose and your previous experience.",
+      "id": "panel2bh-header",
+      "name": "panel2"
+    },
+    {
+      "question": "Is it necessary to know Java?", 
+      "answer": "No, we will conduct several classes on the basics of Java, the gained knowledge will be enough for you to write a graduation project. The course can be completed without experience in IT.",
+      "id": "panel3bh-header",
+      "name": "panel3"
+    },
+    {
+      "question": "Where can you find reviews?", 
+      "answer": "We usually collect them on our telegram channel. Also you can ask about us within the community.",
+      "id": "panel4bh-header",
+      "name": "panel4"
+    },
+    {
+      "question": "Can I pay in installments?", 
+      "answer": "Yes, we also give installments not through a bank, you pay 50% of the amount before the start of the course and another 50% a month after the start of the course. No interest, no prepayment.",
+      "id": "panel5bh-header",
+      "name": "panel5"
+    },
+    {
+      "question": "Are there any discounts?", 
+      "answer": "Yes, we have discounts for early course booking, and for payment within 24 hours after the introductory lesson. You can find out more about discounts from our support @qa_guru_support.",
+      "id": "panel6bh-header",
+      "name": "panel6"
+    },
+    {
+      "question": "Is it possible to return the money?", 
+      "answer": "Yes, you can return the money at any time of learning, we will deduct the amount proportionally to the past classes, we will also return the rest within 2 days.",
+      "id": "panel7bh-header",
+      "name": "panel7"
+    },
+    {
+      "question": "How to pay", 
+      "answer": "Write our Telegram bot https://t.me/qa_guru_support and all available payment methods will be sent to you.",
+      "id": "panel8bh-header",
+      "name": "panel8"
+    }
+  ],
+  "form.title": "Sign up for an introductory lesson on May 18th, 2022",
+  "form.info": "After filling in the form, you will receive an email with instructions for attending the introductory lesson and a link to the school chat",
+  "form.name": "First and last name",
+  "form.phone": "Phone",
+  "form.email": "Email",
+  "form.button": "Submit",
+  "form.accept": "By pressing the button, you allow us to process your personal data and agree to the terms of the offer"
 }
