--- a/src/i18n/locales/ru/ru.json
+++ b/src/i18n/locales/ru/ru.json
@@ -4,64 +4,90 @@
   "header.feedback": "Отзывы",
   "header.price": "Цена",
   "header.personal": "Личный кабинет",
-  "footer.questions": "Есть вопросы? ",
-  "footer.feedback": "Пишите сюда",
-  "footer.chat": "@qa_guru_chat",
-  "faq.objects": [
-    {
-      "question": "Как проходят занятия?", 
-      "answer": "В живом режиме с преподавателями по вторникам и пятницам в 20.00 по МСК, записи занятий выкладываются на следующий день, также к записям добавляем тайм-коды чтобы вам было легче пересматривать их. Домашние задания есть у большинства занятий.",
-      "id": "panel1bh-header",
-      "name": "panel1"
-    },
-    {
-      "question": "Что нужно знать/уметь/иметь чтобы обучаться на курсе?", 
-      "answer": "Операционная система: Win/Mac/Linux, 8 гб ОЗУ, процессор i3 2,8 Ghz или лучше. Минимум 6 свободных часов в неделю, 4 из них будут занимать занятия, плюс выполнение ДЗ, время выполнения сильно зависит от выбранного вами способа выполнения и вашего прошлого опыта.",
-      "id": "panel2bh-header",
-      "name": "panel2"
-    },
-    {
-      "question": "А Java нужно нужно знать?", 
-      "answer": "Нет, мы проведём несколько занятий по основам Java, знаний полученных на них вам хватит для написания дипломного проекта. Курс вполне можно закончить не имея опыта в IT.",
-      "id": "panel3bh-header",
-      "name": "panel3"
-    },
-    {
-      "question": "Где можно почитать отзывы?", 
-      "answer": "Мы как правило собираем их в нашем телеграмм канале. А также вы можете спросить о нас в сообществе.",
-      "id": "panel4bh-header",
-      "name": "panel4"
-    },
-    {
-      "question": "Можно ли оплатить в рассрочку?", 
-      "answer": "Да, мы даём рассрочку не через банк, вы вносите 50% суммы до начала курса, и ещё 50% через месяц после начала обучения. Процентов нет, преплаты нет.",
-      "id": "panel5bh-header",
-      "name": "panel5"
-    },
-    {
-      "question": "Есть ли скидки?", 
-      "answer": "Да, у нас есть скидки за ранее бронирование курса, и за оплату в течении суток после вводного занятия. Подробнее можно узнать у нашей поддержки @qa_guru_support.",
-      "id": "panel6bh-header",
-      "name": "panel6"
-    },
-    {
-      "question": "Можно ли вернуть деньги?", 
-      "answer": "Да, вы можете вернуть деньги в любой момент обучения, мы вычтём сумму пропорционально прошедшим занятиям, а остальное вернём в течении 2-х дней.",
-      "id": "panel7bh-header",
-      "name": "panel7"
-    },
-    {
-      "question": "Как оплатить?", 
-      "answer": "Напишите нашему живому-боту в Telegram https://t.me/qa_guru_support и вам перешлют все доступные способы оплаты.",
-      "id": "panel8bh-header",
-      "name": "panel8"
-    }
-  ],
+  "promo.head": "Курс",
+  "promo.title": "Автоматизация тестирования на Java Advanced",
+  "promo.points":
+    [
+      "2 месяца обучения онлайн",
+      "2 раза в неделю в 20:00",
+      "от 55 000 рублей"
+    ],
+  "promo.button": "Начать обучение",
+  "whom.title": "Кому подойдет наш курс?",
+  "whom.points": 
+    [
+      {
+        "title": "Для QA Automation Engineer с опытом от 1-го года работы",
+        "description": "От вас потребуется знание Java Core, базовые знания Docker, знания реляционных баз данных и SQL. Ну и наличие MacOS для прохождения двух занятий по нативному тестированию iOS."
+      },
+      {
+        "title": "Для тех кто хочет получить углублённые знания в рамках автоматизации на Java",
+        "description": "Настроите кастомные шаблоны для тестов и отчётности, создадите собственные. Научитесь паралелизации. Нативному тестированию Android iOS."
+      },
+      {
+        "title": "Повысить квалификацию, систематизировать знания и попасть в комьюнити",
+        "description": "Освоите актуальный стек, подтянете и систематизируете знания, попадете в сообщество экспертов в области, которым нравятся сложные вопросы, и радует возможность делиться опытом."
+      }
+    ],
+  "faq.objects": 
+    [
+      {
+        "question": "Как проходят занятия?", 
+        "answer": "В живом режиме с преподавателями по вторникам и пятницам в 20.00 по МСК, записи занятий выкладываются на следующий день, также к записям добавляем тайм-коды чтобы вам было легче пересматривать их. Домашние задания есть у большинства занятий.",
+        "id": "panel1bh-header",
+        "name": "panel1"
+      },
+      {
+        "question": "Что нужно знать/уметь/иметь чтобы обучаться на курсе?", 
+        "answer": "Операционная система: Win/Mac/Linux, 8 гб ОЗУ, процессор i3 2,8 Ghz или лучше. Минимум 6 свободных часов в неделю, 4 из них будут занимать занятия, плюс выполнение ДЗ, время выполнения сильно зависит от выбранного вами способа выполнения и вашего прошлого опыта.",
+        "id": "panel2bh-header",
+        "name": "panel2"
+      },
+      {
+        "question": "А Java нужно нужно знать?", 
+        "answer": "Нет, мы проведём несколько занятий по основам Java, знаний полученных на них вам хватит для написания дипломного проекта. Курс вполне можно закончить не имея опыта в IT.",
+        "id": "panel3bh-header",
+        "name": "panel3"
+      },
+      {
+        "question": "Где можно почитать отзывы?", 
+        "answer": "Мы как правило собираем их в нашем телеграмм канале. А также вы можете спросить о нас в сообществе.",
+        "id": "panel4bh-header",
+        "name": "panel4"
+      },
+      {
+        "question": "Можно ли оплатить в рассрочку?", 
+        "answer": "Да, мы даём рассрочку не через банк, вы вносите 50% суммы до начала курса, и ещё 50% через месяц после начала обучения. Процентов нет, преплаты нет.",
+        "id": "panel5bh-header",
+        "name": "panel5"
+      },
+      {
+        "question": "Есть ли скидки?", 
+        "answer": "Да, у нас есть скидки за ранее бронирование курса, и за оплату в течении суток после вводного занятия. Подробнее можно узнать у нашей поддержки @qa_guru_support.",
+        "id": "panel6bh-header",
+        "name": "panel6"
+      },
+      {
+        "question": "Можно ли вернуть деньги?", 
+        "answer": "Да, вы можете вернуть деньги в любой момент обучения, мы вычтём сумму пропорционально прошедшим занятиям, а остальное вернём в течении 2-х дней.",
+        "id": "panel7bh-header",
+        "name": "panel7"
+      },
+      {
+        "question": "Как оплатить?", 
+        "answer": "Напишите нашему живому-боту в Telegram https://t.me/qa_guru_support и вам перешлют все доступные способы оплаты.",
+        "id": "panel8bh-header",
+        "name": "panel8"
+      }
+    ],
   "form.title": "Записаться на вводное занятие 18-го мая 2022",
   "form.info": "После заполнения формы вам придёт письмо с инструкциями для посещения вводного урока и ссылка на чат школы",
   "form.name": "Имя и фамилия",
   "form.phone": "Телефон",
   "form.email": "Email",
   "form.button": "Оставить заявку",
-  "form.accept": "Нажимая на кнопку, вы разрешаете нам обрабатывать ваши персональные данные и соглашаетесь с условиями оферты"
+  "form.accept": "Нажимая на кнопку, вы разрешаете нам обрабатывать ваши персональные данные и соглашаетесь с условиями оферты",
+  "footer.questions": "Есть вопросы? ",
+  "footer.feedback": "Пишите сюда",
+  "footer.chat": "@qa_guru_chat"
 }
